--- a/style.css
+++ b/style.css
@@ -17,7 +17,7 @@ body {
 .container {
     background: white;
     width: 300px;
-    height: 470px;
+    height: auto;
     padding: 15px;
     border-radius: 15px;
     text-align: center;
@@ -26,21 +26,23 @@ body {
 
 .container img {
     width: 100%;
-    border-radius: 15px;
+    border-radius: 10px;
 }
 
 .container h1 {
     color: hsl(218, 44%, 22%);
     font-weight: 700;
-    font-size: 18px;
-    margin: 20px;
+    font-size: 20px;
+    margin: 20px 0 15px;
+    padding: 0 16px;
+    line-height: 1.3;
 }
 
 .container p {
     color: hsl(216, 15%, 48%);
     font-weight: 400;
-    font-size: 13px;
-    margin: 20px;
+    font-size: 15px;
+    margin: 0 20px 20px;
 }
 
 @media (min-width: 1440px) {
